# agent-persona-manager

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  garnix.yaml
.agent/: HEADER.md
.agent/personas/engineering/architect/: PERSONA.md
.agent/personas/engineering/qa/: PERSONA.md
.agent/personas/engineering/senior-software-engineer/: PERSONA.md
.agent/skills/jj-staging/: SKILL.md
.agent/skills/nix-runner/: SKILL.md
.agent/skills/skill-writer/: SKILL.md
.github/workflows/: ci.yaml
.specs/: 01_input_format.md  02_cli_interface.md  03_output_generation.md
nix/checks/: benchmarks.nix  validate-skills.nix  workspace-audit.nix  workspace-clippy.nix  workspace-coverage.nix  workspace-doc.nix  workspace-doctest.nix  workspace-nextest.nix  workspace-unify.nix
nix/devshells/: default.nix
nix/lib/: default.nix  treefmt-config.nix
nix/scripts/: validate_skills.py
