[profile.release]
lto = "fat"
codegen-units = 1

[workspace]
resolver = "2"
members = ["packages/bins/*", "packages/libs/*"]

[workspace.dependencies]
persona-core = { path = "packages/libs/persona-core" }
persona-parser = { path = "packages/libs/persona-parser" }
thiserror = "2"
tracing = "^0.1.44"
walkdir = "2"

[workspace.package]
rust-version = "1.85.0"
version = "0.1.0"
edition = "2024"
