[profile.release]
lto = "fat"
codegen-units = 1

[workspace]
resolver = "2"
members = ["packages/bins/*", "packages/libs/*"]

[workspace.dependencies]
anyhow = "1"
persona-core = { path = "packages/libs/persona-core" }
persona-parser = { path = "packages/libs/persona-parser" }
serde = { version = "^1.0.228", features = ["derive"] }    # unified
serde_yaml = "^0.9.34"                                     # unified
thiserror = "2"
tracing = "^0.1.44"
walkdir = "2"

[workspace.package]
rust-version = "1.87"
version = "0.1.0"
edition = "2024"
